question_generation notebook saved

--- a/notebooks/01_question_generation.ipynb
+++ b/notebooks/01_question_generation.ipynb
@@ -2211,9 +2211,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated 277 new questions, have 277/300 total questions\n",
+      "Generated 20 new questions, have 297/300 total questions\n",
+      "Generated 3 new questions, have 300/300 total questions\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = []\n",
     "num_qs_total = 300\n",
