--- a/notebooks/02_inspect_evaluation.ipynb
+++ b/notebooks/02_inspect_evaluation.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +52,9 @@
     "openai_client = OpenAI()\n",
     "\n",
     "assistant_model = \"claude-3-7-sonnet-20250219\"\n",
-    "eval_model = \"openai/gpt-4o-mini\"\n",
+    "#eval_model = \"openai/gpt-4o-mini\"\n",
     "#eval_model = \"openai/gpt-4.1-mini\"\n",
-    "#eval_model = \"anthropic/claude-3-7-sonnet-20250219\"\n",
+    "eval_model = \"anthropic/claude-3-7-sonnet-20250219\"\n",
     "#eval_model = \"anthropic/claude-sonnet-4-20250514\"\n",
     "\n",
     "#model=\"claude-3-7-sonnet-20250219\""
@@ -315,13 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ede22fe22527466f91e56001713537ca",
+       "model_id": "36c1171df4d6410990271b4cd2e9dd19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -373,13 +373,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c039b16c67c4703804692f194b78bcf",
+       "model_id": "d839129a66344c68a9d439ec38fdda54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -416,8 +416,8 @@
     "                   template_mcq_critique_completion = TEMPLATE_MCQ_CRITIQUE_COMPLETION,\n",
     "                   template_mcq_make_choice = TEMPLATE_MCQ_MAKE_CHOICE,\n",
     "                   n=300, \n",
-    "                   use_cot=True, \n",
-    "                   use_self_critique=True),\n",
+    "                   use_cot=False, \n",
+    "                   use_self_critique=False),\n",
     "    model=eval_model,\n",
     "    log_dir=eval_log_path,\n",
     ")"
