adding claude sonnet 4, update analysis routines

--- a/notebooks/02_inspect_evaluation.ipynb
+++ b/notebooks/02_inspect_evaluation.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,9 @@
     "assistant_model = \"claude-3-7-sonnet-20250219\"\n",
     "#eval_model = \"openai/gpt-4o-mini\"\n",
     "#eval_model = \"openai/gpt-4.1-mini\"\n",
-    "eval_model = \"anthropic/claude-3-7-sonnet-20250219\"\n",
+    "#eval_model = \"openai/gpt-4o\"\n",
+    "eval_model = \"openai/gpt-4.1\"\n",
+    "#eval_model = \"anthropic/claude-3-7-sonnet-20250219\"\n",
     "#eval_model = \"anthropic/claude-sonnet-4-20250514\"\n",
     "\n",
     "#model=\"claude-3-7-sonnet-20250219\""
@@ -315,13 +317,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36c1171df4d6410990271b4cd2e9dd19",
+       "model_id": "c394ab4e645f4e50b33c54cb5c133b69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -373,13 +375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d839129a66344c68a9d439ec38fdda54",
+       "model_id": "ecfe8de4d03b4feea65b0afee6ad1832",
        "version_major": 2,
        "version_minor": 0
       },
